--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="index.css" media="screen" />
 
 <div class="h1div" >
 <h1>
