added the header, it contains the word dontaions, , , , i have turned the dollar values into buttons and i will later add effects for clicking on them when i get to the CSS phase

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>donations</title>
 </head>
-<link rel="stylesheet" type="text/css" href="index.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
+<div class="header"><header>DONATIONS</div>
+<button><div class="head1">$5</div></button>
+<button><div class="head2">$10</div></button>
+<button><div class="head3">$20</div></button>
+</header>
+
+
+
+
+
+
+
+
+</html>
