I tryed adding align-item: center; to the buttons but it didnt work, im sure i could fix it or find a way but id rather no do somthing that will somthing up later so i just changed the $ back from buttons to text and used text-align: center; which worked, I can always just use margin to center the divs manualy then change the width to fit the words adn change the whole div to a link, after this I will format the money so its next to each other

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -8,9 +8,9 @@
 </head>
 <link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
 <div class="header"><header>DONATIONS</div>
-<button><div class="head1">$5</div></button>
-<button><div class="head2">$10</div></button>
-<button><div class="head3">$20</div></button>
+<div class="head1">$5</div>
+<div class="head2">$10</div>
+<div class="head3">$20</div>
 </header>
 
 
