changed text og money to buttons and added stroke styleing to the headers, i will add function to the buttons later and animation as well

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -8,9 +8,9 @@
 </head>
 <link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
 <div class="header"><header>DONATIONS</div>
-<div class="head1">$10</div>
-<div class="head2">$5</div>
-<div class="head3">$20</div>
+<div class="head1"><a href="#" class="button">$10</a></div>
+<div class="head2"><a href="#" class="button">$5</a></div>
+<div class="head3"><a href="#" class="button">$20</a></div>
 </header>
 
 
