finished the transition for the money buttons and link the first pages dropdown to the second page, also change the font of the 'donations' on the page

--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -26,7 +26,7 @@ AP
     <button class="dropbtn">menu</button>
     <div class="dropdown-content">
       <a href="index.html">home</a>
-      <a href="funny photots/b.jpg">donations</a>
+      <a href="donations.html">donations</a>
       <a href="funny photots/HOHT6141.JPG">our team</a>
     </div>
   </div> 
