added text under the buttons, will make them fade in when you press the button

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -12,7 +12,20 @@
 <div class="head2"><a href="#" class="button">$5</a></div>
 <div class="head3"><a href="#" class="button">$20</a></div>
 </header>
+<body>
+<div class="donations">
+<div class="don5">
+you donated 5$
+</div>
+<div class="don10">
+you donated 10$    
+</div>
+<div class="don20">
+you donated 20$
+</div>
+</div>
 
+</body>
 
 
 
