added donation text that pops up when you press a dination button but its broken rn, ill fix it tho

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -8,21 +8,18 @@
 </head>
 <link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
 <div class="header"><header>DONATIONS</div>
-<div class="head1"><a href="#" class="button">$10</a></div>
-<div class="head2"><a href="#" class="button">$5</a></div>
-<div class="head3"><a href="#" class="button">$20</a></div>
+<div class="head1"><a href="#text2" class="button">$10</a></div>
+<div class="head2"><a href="#text1" class="button">$5</a></div>
+<div class="head3"><a href="#text3" class="button">$20</a></div>
 </header>
 <body>
 <div class="donations">
-<div class="don5">
-you donated 5$
-</div>
-<div class="don10">
-you donated 10$    
-</div>
-<div class="don20">
-you donated 20$
-</div>
+<div class="don5"><p id="text1">you donated 5$</div></p>
+
+<div class="don10"><p id="text2">you donated 10$</div></p>    
+
+<div class="don20"><p id="text3">you donated 20$</div></p>
+
 </div>
 
 </body>
