I give up on the dollar sign, it impossible i swear, why is somthing this simple this hard OMG, the problem is that the code im trying to fix is base text in html that i cant div or do anything with and any changes I make to the whole code also overrides the code im trying to keep viewable, i'll just have it as 5,10 and 20 and seal with whatever problems that brings

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -43,9 +43,9 @@
 
 <link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
 <div class="header"><header>DONATIONS</div>
-<div class="head1"><a href="#text2" class="button" onClick="calculate(this)">10<div class="D1">10$</div></a></div>
-<div class="head2"><a href="#text1" class="button"onClick="calculate(this)">5<div class="D1">5$</div></a></div>
-<div class="head3"><a href="#text3" class="button"onClick="calculate(this)">20<div class="D3">20$</div></a></div>
+<div class="head1"><a href="#text2" class="button" onClick="calculate(this)">10</a></div>
+<div class="head2"><a href="#text1" class="button"onClick="calculate(this)">5</a></div>
+<div class="head3"><a href="#text3" class="button"onClick="calculate(this)">20</a></div>
 <div class="calc-grid">
   <div class="output">
       <div class="current" id="current">0</div>
