--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -43,13 +43,14 @@
 
 <link rel="stylesheet" type="text/css" href="donations.css" media="screen" />
 <div class="header"><header>DONATIONS</div>
+    <div class="output">
+      amount donated:<div class="current" id="current">0</div>
+  </div>
 <div class="head1"><a href="#text2" class="button" onClick="calculate(this)">10</a></div>
 <div class="head2"><a href="#text1" class="button"onClick="calculate(this)">5</a></div>
 <div class="head3"><a href="#text3" class="button"onClick="calculate(this)">20</a></div>
 <div class="calc-grid">
-  <div class="output">
-      <div class="current" id="current">0</div>
-  </div>
+
 
 </div>
 </header>
