--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -56,11 +56,11 @@
 </header>
 <body>
 <div class="donations">
-  <div class="don5"><p id="text1">you donated 5$</div></p>
+  <div class="don5"><p id="text1">you donated $5</div></p>
 
-<div class="don10"><p id="text2">you donated 10$</div></p>    
+<div class="don10"><p id="text2">you donated $10</div></p>    
 
-<div class="don20"><p id="text3">you donated 20$</div></p>
+<div class="don20"><p id="text3">you donated $20</div></p>
 
 </div>
 
