added another page at the rquest of the teacher, it only has the base header right now but i'll add images and stuff i guess

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -29,7 +29,7 @@
             <div class="dropdown-content">
               <a href="index.html">home</a>
               <a href="donations.html">donations</a>
-              <a href="funny photots/HOHT6141.JPG">our team</a>
+              <a href="ourteam.html">our team</a>
             </div>
           </div> 
         </h3>
