--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -27,7 +27,7 @@ AP
     <div class="dropdown-content">
       <a href="index.html">home</a>
       <a href="donations.html">donations</a>
-      <a href="funny photots/HOHT6141.JPG">our team</a>
+      <a href="ourteam.html">our team</a>
     </div>
   </div> 
 </h3>
