end of session 5, 26/5/2022

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -4,48 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ourteam</title>
+    <title>Document</title>
 </head>
 <link rel="stylesheet" type="text/css" href="ourteam.css" media="screen" />
-<div class="h1div" >
-    <h1>
-    POLLUTION BAD
-    </h1>
-    </div>
-    
-    <div class="umaru" >
-        <a href="https://jcw87.github.io/c2-sans-fight/" ><img src="funny photots/trash.png" class="UM"></a> 
-    </div>
-    <h2>
-    AP
-    </h2>
-    <div class="menu">
-    <h3> 
-    <div class="dropdown">
-        <button class="dropbtn">menu</button>
-        <div class="dropdown-content">
-          <a href="index.html">home</a>
-          <a href="donations.html">donations</a>
-          <a href="ourteam.html">our team</a>
-        </div>
-      </div> 
-    </h3>
-    </div>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</html>
