added body than body div to ourteam page, its going to be a page where i introduce all the different bins as if they were members of a team the kids will love it

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
 </head>
 <link rel="stylesheet" type="text/css" href="ourteam.css" media="screen" />
+<body>
+<div class="mem1">
+<div class="mem1img">
+<img src="funny photots/red.jpg" class="RB">  
+</div>
+<div class="mem1text">
+red bin 
+</div>
+<div class="mem1body">
+red bin mainly takes general trash, working all over the contry at multiple establishments he i the most common bin you will find, just make sure what you put in red bin cant go anywhereelse to avoid wasteful dumping
+
+</div>
+</div>
+
+
+</body>
