--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -37,10 +37,10 @@ AP
 </body>   
 <div class="bodytext">
 <text>
-    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</text> 
+The litter problem we are currently facing in Ormiston revolves around the fact that people do not have the care or access to throw their trash away, we can solve this by placing more rubbish bins in highly trafficed areas like next to the ormiston town shopping center or fast food joints. This will encourage those who usually litter to throw away their trash, these bins will be especially effective since they are in high foot traffic areas when littering is less likly to be called out
 </div>
 <div class="bodygraph1">
-    <img src="funny photots/pie.png" class="PIE">
+    <img src="funny photots/ormiston.jpg" class="PIE">
     </div>
    <div class="video">
     <iframe width="420" height="315"
