added 'our team' to the top aswell as the header, also I rearanged everything

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+    <div class="h1div" >
+        <h1>
+        POLLUTION BAD
+        </h1>
+        </div>
+        
+        <div class="umaru" >
+            <a href="https://jcw87.github.io/c2-sans-fight/" ><img src="funny photots/trash.png" class="UM"></a> 
+        </div>
+        <h2>
+        AP
+        </h2>
+        <div class="menu">
+        <h3> 
+        <div class="dropdown">
+            <button class="dropbtn">menu</button>
+            <div class="dropdown-content">
+              <a href="index.html">home</a>
+              <a href="donations.html">donations</a>
+              <a href="ourteam.html">our team</a>
+            </div>
+          </div> 
+        </h3>
+        </div>
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +31,10 @@
 <title>Document</title>
 </head>
 <link rel="stylesheet" type="text/css" href="ourteam.css" media="screen" />
+<header>
+OUR TEAM
+
+</header>
 <body>
 <div class="mem1">
 <div class="mem1img">
@@ -16,8 +44,7 @@
 red bin 
 </div>
 <div class="mem1body">
-red bin mainly takes general trash, working all over the contry at multiple establishments he i the most common bin you will find, just make sure what you put in red bin cant go anywhereelse to avoid wasteful dumping
-
+red bin mainly takes general trash, working all over the contry at multiple establishments they are the most common bin you will find, just make sure what you put in red bin cant go anywhere else to avoid wasteful dumping.
 </div>
 </div>
 
