end of session 6, 30/5/22

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -47,6 +47,19 @@ red bin
 red bin mainly takes general trash, working all over the contry at multiple establishments they are the most common bin you will find, just make sure what you put in red bin cant go anywhere else to avoid wasteful dumping.
 </div>
 </div>
+<div class="mem2">
+<div class="mem2img">
+<img src="funny photots/blue.jpg" class="BL">
+</div>
+<div class="mem2text">
+yellow bin
+</div>
+<div class="mem2body">
+some stuff about the bin or smthing idk
+</div>
+</div>
 
+
+</div>
 
 </body>
