changes pollution bad to AUCKLAND POLLUTION to better fit the theme of auckland pollution

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -12,7 +12,7 @@
   </script>
     <div class="h1div" >
         <h1>
-        POLLUTION BAD
+          AUCKLAND POLLUTION
         </h1>
         </div>
         
