--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <div class="h1div" >
         <h1>
-        POLLUTION BAD
+        AUCKLAND POLLUTION
         </h1>
         </div>
         
