changed the top left image to link to th eindex page instead of sans fight chrome page

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -17,7 +17,7 @@
         </div>
         
         <div class="umaru" >
-            <a href="https://jcw87.github.io/c2-sans-fight/" ><img src="funny photots/trash.png" class="UM"></a> 
+            <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
         </div>
         <h2>
         AP
