--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="umaru" >
-    <a href="https://jcw87.github.io/c2-sans-fight/" ><img src="funny photots/trash.png" class="UM"></a> 
+    <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
 </div>
 <h2>
 AP
@@ -37,7 +37,7 @@ AP
 </body>   
 <div class="bodytext">
 <text>
-The litter problem we are currently facing in Ormiston revolves around the fact that people do not have the care or access to throw their trash away, we can solve this by placing more rubbish bins in highly trafficed areas like next to the ormiston town shopping center or fast food joints. This will encourage those who usually litter to throw away their trash, these bins will be especially effective since they are in high foot traffic areas when littering is less likly to be called out
+The litter problem we are currently facing in Ormiston revolves around the fact that people do not have the care or access to throw their trash away, we can solve this by placing more rubbish bins in highly trafficed areas like next to the ormiston town shopping center or fast food joints. This will encourage those who usually litter to throw away their trash, these bins will be especially effective since they are in high foot traffic areas when littering is less likely to be called out
 </div>
 <div class="bodygraph1">
     <img src="funny photots/ormiston.jpg" class="PIE">
