added desription for the yellow bin

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -55,7 +55,7 @@ red bin mainly takes general trash, working all over the contry at multiple esta
 yellow bin
 </div>
 <div class="mem2body">
-some stuff about the bin or smthing idk
+This is yellow bin, they are the leader behind the current recycleing boom, find out what you can and cant put in yellow bin here https://www.aucklandcouncil.govt.nz/rubbish-recycling/bin-requests/Pages/what-put-your-rubbish.aspx
 </div>
 </div>
 
