--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <div class="h1div" >
         <h1>
-        AUCKLAND POLLUTION
+          ORMISTON POLLUTION
         </h1>
         </div>
         
@@ -10,7 +10,7 @@
             <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
         </div>
         <h2>
-        AP
+        OP
         </h2>
         <div class="menu">
         <h3> 
@@ -55,7 +55,7 @@ red bin mainly takes general trash, working all over the contry at multiple esta
 yellow bin
 </div>
 <div class="mem2body">
-This is yellow bin, they are the leader behind the current recycleing boom, find out what you can and cant put in yellow bin here https://www.aucklandcouncil.govt.nz/rubbish-recycling/bin-requests/Pages/what-put-your-rubbish.aspx
+This is yellow bin, they are the leader behind the current recycleing boom, find out what you can and cant put in yellow bin  <a href="https://www.aucklandcouncil.govt.nz/rubbish-recycling/bin-requests/Pages/what-put-your-rubbish.aspx">here</a>
 </div>
 </div>
 
