--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -10,7 +10,7 @@
 
 <div class="h1div" >
 <h1>
-  AUCKLAND POLLUTION
+  ORMISTON POLLUTION
 </h1>
 </div>
 
@@ -18,7 +18,7 @@
     <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
 </div>
 <h2>
-AP
+OP
 </h2>
 <div class="menu">
 <h3> 
@@ -59,5 +59,11 @@ The litter problem we are currently facing in Ormiston revolves around the fact 
 </div>
 </div> 
 </div>
+<footer>
+<div class="footerout">
 
+</div>
+
+
+</footer>
 </html>
