i added images but they refuse to move idk whats wrong

--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -60,7 +60,16 @@ The litter problem we are currently facing in Ormiston revolves around the fact 
 </div> 
 </div>
 <footer>
-
-
+  <div class="images">
+<div class="fac">
+  <img src="funny photots/facebook.png" class="face">
+</div>
+<div class="twi">
+  <img src="funny photots/twitter.png" class="twit">
+</div>
+<div class="tub">
+  <img src="funny photots/youtube.png" class="tube">
+</div>
+</div>
 </footer>
 </html>
