i positioned the images

--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -62,13 +62,13 @@ The litter problem we are currently facing in Ormiston revolves around the fact 
 <footer>
   <div class="images">
 <div class="fac">
-  <img src="funny photots/facebook.png" class="face">
+  <a href="ourteam.html"><img src="funny photots/facebook.png" class="face"></a>
 </div>
 <div class="twi">
-  <img src="funny photots/twitter.png" class="twit">
+  <a href="ourteam.html"><img src="funny photots/twitter.png" class="twit"></a>
 </div>
 <div class="tub">
-  <img src="funny photots/youtube.png" class="tube">
+  <a href="ourteam.html"><img src="funny photots/youtube.png" class="tube"></a>
 </div>
 </div>
 </footer>
