im repositioning the main page

--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -22,6 +22,7 @@ OP
 </h2>
 <div class="menu">
 <h3> 
+<!---base code for the dropdown menu in the top right-->
 <div class="dropdown">
     <button class="dropbtn">menu</button>
     <div class="dropdown-content">
