--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -36,6 +36,9 @@ OP
 <div class="bodydiv">
 <body>
 </body>   
+    <div class="RIV">
+     Real demonstrational video:
+     </div>
 <div class="bodytext">
 <text>
 The litter problem we are currently facing in Ormiston revolves around the fact that people do not have the care or access to throw their trash away, we can solve this by placing more rubbish bins in highly trafficed areas like next to the ormiston town shopping center or fast food joints. This will encourage those who usually litter to throw away their trash, these bins will be especially effective since they are in high foot traffic areas when littering is less likely to be called out
@@ -43,15 +46,17 @@ The litter problem we are currently facing in Ormiston revolves around the fact 
 <div class="bodygraph1">
     <img src="funny photots/ormiston.jpg" class="PIE">
     </div>
+
    <div class="video">
     <iframe width="420" height="315"
     src="https://www.youtube.com/embed/Bo7KSLE7zag">
     </iframe>
 <div class="form">
+  Subscribe to the news letter:
     <form autocomplete="off">
-        <label for="fname">First name:</label><br>
+        <label for="fname">First and last name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
-        <label for="lname">Last name:</label><br>
+        <label for="lname">Email:</label><br>
         <input type="text" id="lname" name="lname" value=""><br><br>
         <input type="submit" value="Submit">
       </form> 
