changed text to be more soft

--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -52,8 +52,9 @@ red bin mainly takes general trash, working all over the contry at multiple esta
 <img src="funny photots/blue.jpg" class="BL">
 </div>
 <div class="mem2text">
-yellow bin
+yellow 
 </div>
+bin
 <div class="mem2body">
 This is yellow bin, they are the leader behind the current recycleing boom, find out what you can and cant put in yellow bin  <a href="https://www.aucklandcouncil.govt.nz/rubbish-recycling/bin-requests/Pages/what-put-your-rubbish.aspx">here</a>
 </div>
