added title to pages and favicon, also readjusted the social links on home page, made code look nice

--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" href="funny photots/sans.jpg">
+<title>Donations | OP</title>
 <script>
 function calculate(button) {
 const number = parseInt(button.innerHTML)
