--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" href="funny photots/sans.jpg">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home | OP</title>
 </head>
 <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
-
 <div class="h1div" >
 <h1>
-  ORMISTON POLLUTION
+ORMISTON POLLUTION
 </h1>
 </div>
-
 <div class="umaru" >
-    <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
+<a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
 </div>
 <h2>
 OP
@@ -24,57 +23,55 @@ OP
 <h3> 
 <!---base code for the dropdown menu in the top right-->
 <div class="dropdown">
-    <button class="dropbtn">menu</button>
-    <div class="dropdown-content">
-      <a href="index.html">home</a>
-      <a href="donations.html">donations</a>
-      <a href="ourteam.html">our team</a>
-    </div>
-  </div> 
+<button class="dropbtn">menu</button>
+<div class="dropdown-content">
+<a href="index.html">home</a>
+<a href="donations.html">donations</a>
+<a href="ourteam.html">our team</a>
+</div>
+</div> 
 </h3>
 </div>
 <div class="bodydiv">
 <body>
 </body>   
-    <div class="RIV">
-     Real demonstrational video:
-     </div>
+<div class="RIV">
+Real demonstrational video:
+</div>
 <div class="bodytext">
 <text>
 The litter problem we are currently facing in Ormiston revolves around the fact that people do not have the care or access to throw their trash away, we can solve this by placing more rubbish bins in highly trafficed areas like next to the ormiston town shopping center or fast food joints. This will encourage those who usually litter to throw away their trash, these bins will be especially effective since they are in high foot traffic areas when littering is less likely to be called out
 </div>
 <div class="bodygraph1">
-    <img src="funny photots/ormiston.jpg" class="PIE">
-    </div>
-
-   <div class="video">
-    <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/Bo7KSLE7zag">
-    </iframe>
+<img src="funny photots/ormiston.jpg" class="PIE">
+</div>
+<div class="video">
+<iframe width="420" height="315"
+src="https://www.youtube.com/embed/Bo7KSLE7zag">
+</iframe>
 <div class="form">
-  Subscribe to the news letter:
-    <form autocomplete="off">
-        <label for="fname">First and last name:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="lname">Email:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br><br>
-        <input type="submit" value="Submit">
-      </form> 
-      
-
+Subscribe to the news letter:
+<form autocomplete="off">
+<label for="fname">First and last name:</label><br>
+<input type="text" id="fname" name="fname" value=""><br>
+<label for="lname">Email:</label><br>
+<input type="text" id="lname" name="lname" value=""><br><br>
+<input type="submit" value="Submit">
+</form> 
 </div>
 </div> 
 </div>
+<!--code for the images in footer-->
 <footer>
-  <div class="images">
+<div class="images">
 <div class="fac">
-  <a href="ourteam.html"><img src="funny photots/facebook.png" class="face"></a>
+<a href="ourteam.html"><img src="funny photots/facebook.png" class="face"></a>
 </div>
 <div class="twi">
-  <a href="ourteam.html"><img src="funny photots/twitter.png" class="twit"></a>
+<a href="ourteam.html"><img src="funny photots/twitter.png" class="twit"></a>
 </div>
 <div class="tub">
-  <a href="ourteam.html"><img src="funny photots/youtube.png" class="tube"></a>
+<a href="ourteam.html"><img src="funny photots/youtube.png" class="tube"></a>
 </div>
 </div>
 </footer>
