--- a/CSS/DM/ourteam.html
+++ b/CSS/DM/ourteam.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <div class="h1div" >
-        <h1>
-          ORMISTON POLLUTION
-        </h1>
-        </div>
-        
-        <div class="umaru" >
-            <a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
-        </div>
-        <h2>
-        OP
-        </h2>
-        <div class="menu">
-        <h3> 
-        <div class="dropdown">
-            <button class="dropbtn">menu</button>
-            <div class="dropdown-content">
-              <a href="index.html">home</a>
-              <a href="donations.html">donations</a>
-              <a href="ourteam.html">our team</a>
-            </div>
-          </div> 
-        </h3>
-        </div>
+<link rel="icon" href="funny photots/sans.jpg">
+<title>Our Team | OP</title>
+<div class="h1div" >
+<h1>
+ORMISTON POLLUTION
+</h1>
+</div>
+<div class="umaru" >
+<a href="index.html" ><img src="funny photots/trash.png" class="UM"></a> 
+</div>
+<h2>
+OP
+</h2>
+<div class="menu">
+<h3> 
+<div class="dropdown">
+<button class="dropbtn">menu</button>
+<div class="dropdown-content">
+<a href="index.html">home</a>
+<a href="donations.html">donations</a>
+<a href="ourteam.html">our team</a>
+</div>
+</div> 
+</h3>
+</div>
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +34,6 @@
 <link rel="stylesheet" type="text/css" href="ourteam.css" media="screen" />
 <header>
 OUR TEAM
-
 </header>
 <body>
 <div class="mem1">
@@ -54,13 +54,12 @@ red bin mainly takes general trash, working all over the contry at multiple esta
 <div class="mem2text">
 yellow 
 </div>
+<div class="binword">
 bin
+</div>
 <div class="mem2body">
 This is yellow bin, they are the leader behind the current recycleing boom, find out what you can and cant put in yellow bin  <a href="https://www.aucklandcouncil.govt.nz/rubbish-recycling/bin-requests/Pages/what-put-your-rubbish.aspx">here</a>
 </div>
 </div>
-
-
 </div>
-
 </body>
