added social links in footer as text

--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -63,15 +63,16 @@ Subscribe to the news letter:
 </div>
 <!--code for the images in footer-->
 <footer>
+<div class="social">SOCIAL LINKS</div>
 <div class="images">
 <div class="fac">
-<a href="ourteam.html"><img src="funny photots/facebook.png" class="face"></a>
+<a href="https://www.facebook.com/"><img src="funny photots/facebook.png" class="face"></a>
 </div>
 <div class="twi">
-<a href="ourteam.html"><img src="funny photots/twitter.png" class="twit"></a>
+<a href="https://twitter.com/"><img src="funny photots/twitter.png" class="twit"></a>
 </div>
 <div class="tub">
-<a href="ourteam.html"><img src="funny photots/youtube.png" class="tube"></a>
+<a href="https://www.youtube.com/"><img src="funny photots/youtube.png" class="tube"></a>
 </div>
 </div>
 </footer>
