--- a/CSS/DM/donations.html
+++ b/CSS/DM/donations.html
@@ -45,7 +45,7 @@ amount donated:<div class="current" id="current">0</div>
 <body>
 <div class="donations">
 <div class="don5"><p id="text1">you donated $5</div></p>
-<div class="don10"><p id="text2">you donated <a href="secretsans.html">$10</a></div></p>    
+<div class="don10"><p id="text2">you donated $10</div></p>    
 <div class="don20"><p id="text3">you donated $20</div></p>
 </div>
 </body>
