--- a/CSS/DM/index.html
+++ b/CSS/DM/index.html
@@ -56,11 +56,7 @@ Subscribe to the news letter:
 <input type="text" id="fname" name="fname" value=""><br>
 <label for="lname">Email:</label><br>
 <input type="text" id="lname" name="lname" value=""><br><br>
-<button onclick=
-"input.getElementByid(
- 'fname').value = ''">
-Click here to clear
-</button>
+<input type="submit" value="Submit">
 </form> 
 </div>
 </div> 
